<resources>
    <string name="app_name">Europcar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication">Authentication</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>


    <string name="create_account">Create your personal account</string>
    <string name="submit_account">Create an account</string>

    <string name="city">City</string>
    <string name="zip">Zip</string>

</resources>
