<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="#EEEEEE"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentication"
        android:padding="15dp"
        style="@style/Base.TextAppearance.AppCompat.Headline"/>
    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Login"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/btn_connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="25dp"
        android:background="#4DB6AC"
        android:textColor="#ffffff"/>
    <Button
        android:id="@+id/redirect_inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:textColor="#3F51B5"/>
</LinearLayout>
