<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:padding="15dp"/>
    <EditText
        android:id="@+id/inscr_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Login"/>
    <EditText
        android:id="@+id/inscr_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/inscr_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"/>
    <EditText
        android:id="@+id/inscr_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Token de sécurité"/>
    <Button
        android:id="@+id/btn_inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_account"
        android:background="#4DB6AC"
        android:layout_marginTop="25dp"/>
</LinearLayout>
